system/media-library/templates/qbittorrent-service.yml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
spec:
  selector:
    app: qbittorrent
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
